--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.4"
 
 services:
   php:
+    container_name: ${PROJECT_NAME:-project}-php
     build:
       context: .
       target: app_php
@@ -18,6 +19,8 @@ services:
       timeout: 3s
       retries: 3
       start_period: 30s
+    networks:
+      - default
     environment:
       # Run "composer require symfony/orm-pack" to install and configure Doctrine ORM
       DATABASE_URL: mysql://app:!ChangeMe!@database:3306/app?serverVersion=8&charset=utf8mb4
@@ -25,8 +28,9 @@ services:
       MERCURE_URL: ${CADDY_MERCURE_URL:-http://caddy/.well-known/mercure}
       MERCURE_PUBLIC_URL: https://${SERVER_NAME:-localhost}/.well-known/mercure
       MERCURE_JWT_SECRET: ${CADDY_MERCURE_JWT_SECRET:-!ChangeThisMercureHubJWTSecretKey!}
-
+  
   caddy:
+    container_name: ${PROJECT_NAME:-project}-caddy
     build:
       context: .
       target: app_caddy
@@ -41,19 +45,29 @@ services:
       - php_socket:/var/run/php
       - caddy_data:/data
       - caddy_config:/config
-    ports:
-      # HTTP
-      - target: 80
-        published: ${HTTP_PORT:-80}
-        protocol: tcp
-      # HTTPS
-      - target: 443
-        published: ${HTTPS_PORT:-443}
-        protocol: tcp
-      # HTTP/3
-      - target: 443
-        published: ${HTTP3_PORT:-443}
-        protocol: udp
+    networks:
+      - proxy
+      - default
+    labels:
+      - "traefik.enable=true"
+      - "traefik.docker.network=proxy"
+      - "traefik.http.routers.${PROJECT_NAME:-project}-secure.entrypoints=websecure"
+      - "traefik.http.routers.${PROJECT_NAME:-project}-secure.rule=Host(`${PROJECT_NAME:-project}.${DOMAIN}`)"
+      - "traefik.http.routers.${PROJECT_NAME:-project}-secure.service=${PROJECT_NAME:-project}-secure-service"
+      - "traefik.http.services.${PROJECT_NAME:-project}-service.loadbalancer.server.port=80"
+#    ports:
+#      # HTTP
+#      - target: 80
+#        published: ${HTTP_PORT:-80}
+#        protocol: tcp
+#      # HTTPS
+#      - target: 443
+#        published: ${HTTPS_PORT:-443}
+#        protocol: tcp
+#      # HTTP/3
+#      - target: 443
+#        published: ${HTTP3_PORT:-443}
+#        protocol: udp
 
 # Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
 ###> symfony/mercure-bundle ###
@@ -61,6 +75,7 @@ services:
 
 ###> doctrine/doctrine-bundle ###
   database:
+    container_name: ${PROJECT_NAME:-project}-db
     build: ./docker/mysql
     restart: always
     environment:
@@ -71,9 +86,11 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-!ChangeMe!}
       # Password for root access
       MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD:-!ChangeMe!}
-    ports:
-      # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
+#    ports:
+#      # <Port exposed> : < MySQL Port running inside container>
+#      - '3306:3306'
+    networks:
+      - default
     expose:
       # Opens port 3306 on the container
       - 3306
@@ -88,10 +105,16 @@ services:
 
 volumes:
   php_socket:
+    name: ${PROJECT_NAME:-project}-php_socket
   caddy_data:
+    name: ${PROJECT_NAME:-project}-caddy_data
   caddy_config:
+    name: ${PROJECT_NAME:-project}-caddy_config
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
+networks:
+  proxy:
+    external: true
 
 ###> doctrine/doctrine-bundle ###
   my-db:
