--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,8 +53,8 @@ services:
       - "traefik.docker.network=proxy"
       - "traefik.http.routers.${PROJECT_NAME:-project}-secure.entrypoints=websecure"
       - "traefik.http.routers.${PROJECT_NAME:-project}-secure.rule=Host(`${PROJECT_NAME:-project}.${DOMAIN}`)"
-      - "traefik.http.routers.${PROJECT_NAME:-project}-secure.service=${PROJECT_NAME:-project}-secure-service"
-      - "traefik.http.services.${PROJECT_NAME:-project}-service.loadbalancer.server.port=80"
+#      - "traefik.http.routers.${PROJECT_NAME:-project}-secure.service=${PROJECT_NAME:-project}-secure-service"
+#      - "traefik.http.services.${PROJECT_NAME:-project}-service.loadbalancer.server.port=80"
 #    ports:
 #      # HTTP
 #      - target: 80
